# grimorio

./: AGENTS.md  Cargo.toml  README.md
contrib/: README.md
contrib/linux/: grimoriod.service
contrib/macos/: io.grimorio.grimoriod.plist
contrib/windows/: Install-GrimorioTask.ps1
src/: crypto.rs  daemon.rs  ipc.rs  main.rs  password.rs  protocol.rs
src/ipc/: mod.rs  unix.rs  windows.rs
tests/: integration.rs
