[package]
name = "grimorio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grimorio"
path = "src/main.rs"

[[bin]]
name = "grimoriod"
path = "src/daemon.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
rpassword = "7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
